[gd_scene load_steps=8 format=2]

[ext_resource path="res://items/interactive_body.tscn" type="PackedScene" id=1]
[ext_resource path="res://items/keys/key.gd" type="Script" id=2]
[ext_resource path="res://shaders/item_highlighter.gdshader" type="Shader" id=3]
[ext_resource path="res://items/keys/key.obj" type="ArrayMesh" id=4]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 3 )
shader_param/shine_color = Color( 1, 1, 1, 1 )
shader_param/cycle_interval = 1.0
shader_param/shine_speed = 3.0
shader_param/shine_width = 3.0

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.403922, 0.403922, 0.403922, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.123178, 0.0490037, 0.31639 )

[node name="key" type="Spatial"]
script = ExtResource( 2 )

[node name="highlighterMesh" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 4 )
material/0 = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 4 )
material/0 = SubResource( 7 )

[node name="Sprite3D" type="Sprite3D" parent="MeshInstance"]
transform = Transform( 0.2, 0, 0, 0, -8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 0, 0.211883, -1.9816 )

[node name="interactive_body" parent="." instance=ExtResource( 1 )]
PROMPT_MESSAGE = "Pegar a chave "

[node name="CollisionShape" type="CollisionShape" parent="interactive_body"]
shape = SubResource( 2 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unit_size = 16.9

[connection signal="interacted" from="interactive_body" to="." method="_on_interactive_body_interacted"]
